--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import '../node_modules/bootstrap/dist/css/bootstrap.min.css';
 
 body{
-    background-color: black;
+    background-color: white;
 }
 /* footer{
     height: 70px;
